FKS-924: Adjust logging